# agentbus

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  agentbus.yaml  feature-intereactive_mode.md  index.html  mkdocs.yml  plan.md  prd.md  progress.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
agentbus/: __init__.py  bus.py  cli.py  daemon.py  doctor.py  errors.py  gateway.py  introspection.py  launch.py  logging_config.py  mcp.py  memory.py  message.py  node.py  swarm.py  topic.py  utils.py
agentbus/channels/: __init__.py  base.py  chunking.py  dedup.py  loader.py  reconnect.py  watchdog.py
agentbus/channels/slack/: __init__.py  config.py  gateway.py
agentbus/channels/telegram/: __init__.py  config.py  gateway.py
agentbus/chat/: __init__.py  _commands.py  _config.py  _permissions.py  _planner.py  _runner.py  _sandbox.py  _tools.py  _tui.py
agentbus/harness/: __init__.py  compaction.py  extensions.py  loop.py  session.py
agentbus/harness/providers/: __init__.py  anthropic.py  ollama.py  openai.py
agentbus/nodes/: __init__.py  observer.py
agentbus/schemas/: common.py  harness.py  system.py
agentbus/setup/: __init__.py  prompter.py  theme.py  wizard.py
bus/: index.html
cli/: index.html
concepts/: index.html
docs/: bus.md  cli.md  concepts.md  examples.md  harness.md  index.md  launch.md  production-plan.md  schemas.md
examples/: index.html
examples/bus_agent/: main.py
examples/echo_agent/: main.py
examples/sensor_pipeline/: main.py
examples/swarm/: main.py
examples/tool_agent/: main.py
examples/writer_critic/: main.py
harness/: index.html
launch/: index.html
production-plan/: index.html
schemas/: index.html
search/: search_index.json
site/: 404.html  index.html
site/bus/: index.html
site/cli/: index.html
site/concepts/: index.html
site/examples/: index.html
site/harness/: index.html
site/launch/: index.html
site/schemas/: index.html
site/search/: search_index.json
tests/: conftest.py  test_bus.py  test_bus_correlation_id.py  test_channels.py  test_chat.py  test_cli.py  test_daemon.py  test_doctor.py  test_graceful_shutdown.py  test_harness_compaction.py  test_harness_extensions.py  test_harness_loop.py  test_harness_session.py  test_integration.py  test_introspection.py  test_launch.py  test_launch_support.py  test_logging_config.py  test_mcp.py  test_memory.py  test_message.py  test_node.py  test_permissions.py  test_sandbox.py  test_schemas.py  test_setup.py  test_swarm.py  test_topic.py  test_utils.py
